[Feat] Support COM_FILED_LIST in external catalog database